# svelte-site-template-with-server

server/: Cargo.toml
server/src/: main.rs  server.rs
site/: package-lock.json  package.json
site/src/: app.html
site/src/lib/components/core/: Button.svelte  Menu.svelte  Text.svelte
site/src/lib/components/layout/: Box.svelte  Center.svelte  Column.svelte  Flex.svelte  Overlay.svelte  Padding.svelte  Popper.svelte  Row.svelte
site/src/lib/components/meta/: MovementDetector.svelte  ServerManager.svelte  Template.svelte  ThemeManager.svelte
site/src/routes/: +layout.svelte  +page.svelte
