[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.12", features = ["ws"] }

tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.18.0"

futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }